# Master-Player

./: BufferOverflowException.cpp  BufferOverflowException.h  CMakeCache.txt  CMakeLists.txt  Connection.cpp  Connection.h  ConnectionError.cpp  ConnectionError.h  Listener.cpp  Listener.h  Makefile  ParseException.cpp  ParseException.h  Player.cpp  Player.h  RemotePlayer.cpp  RemotePlayer.h  RemotePlayerCollection.cpp  RemotePlayerCollection.h  RemotePlayerException.cpp  RemotePlayerException.h  ServerClosedError.cpp  ServerClosedError.h  TCPConnection.cpp  TCPConnection.h  Timer.cpp  Timer.h  UDPConnection.cpp  UDPConnection.h  cmake_install.cmake  mainMaster.cpp  mainPlayer.cpp  mainTests.cpp
